--- a/test/fixtures/myproducts.yml
+++ b/test/fixtures/myproducts.yml
@@ -6,7 +6,8 @@ one:
   description: MyString
   price: 1
   vendor_id: 1
-  expiration: 2015-12-10 15:30:21
+  expiration: 2015-12-17 17:45:20
+  counter: 1
 
 two:
   title: MyString
@@ -14,4 +15,5 @@ two:
   description: MyString
   price: 1
   vendor_id: 1
-  expiration: 2015-12-10 15:30:21
+  expiration: 2015-12-17 17:45:20
+  counter: 1
